--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NGN Crypto Rate Checker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="JavaScript/Refresh.js"></script>
     <style>
         :root {
             --primary: #6e45e2;
@@ -575,7 +577,7 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate snappy-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
