--- a/index.html
+++ b/index.html
@@ -583,14 +583,14 @@
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate snappy-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate snappy-usdt-sell">₦--</div>
                 </div>
                 <div class="updated-time">Updating...</div>
             </div>
@@ -601,26 +601,6 @@
             <br>Last updated: <span id="current-time">--</span>
         </div>
     </div>
-
-    <script>
-        async function updateRate() {
-        try {
-            const response = await axios.get('https://fantastic-rejoicing-prod.up.railway.app/rates/snappy-exchange');
-            const btcValue = response.data[0].btc;
-            const ethValue = response.data[0].eth;
-            const usdtValue = response.data[0].usdt;
-
-            document.querySelector('.snappy-btc-sell').textContent = `₦${btcValue || '--'}`;
-        } catch (error) {
-            console.error('Failed to fetch BTC rate:', error);
-        }
-        }
-
-        updateRate();
-
-        setInterval(updateRate, 60000);
-    </script>
-
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
