feat:update dynamic Snappy rate JS

--- a/index.html
+++ b/index.html
@@ -602,6 +602,8 @@
         </div>
     </div>
 
+    <script src="JavaScript/Refresh.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Theme toggle functionality
