feat:update dynamic Snappy rate time

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     </div>
                     <div class="rate-value sell-rate snappy-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time">Updating...</div>
+                <div class="updated-time snappy-time">Updating...</div>
             </div>
         </div>
 
