feat: all sell rates dynamic update

--- a/index.html
+++ b/index.html
@@ -441,23 +441,23 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate astro-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate astro-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate astro-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time">Updating...</div>
+                <div class="updated-time astro-time">Updating...</div>
             </div>
 
             <!-- Breet Rate -->
@@ -468,23 +468,23 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate breet-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate breet-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate breet-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time">Updating...</div>
+                <div class="updated-time breet-time">Updating...</div>
             </div>
 
             <!-- Jeroid -->
@@ -495,23 +495,23 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate jeroid-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate jeroid-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate jeroid-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time">Updating...</div>
+                <div class="updated-time jeroid-time">Updating...</div>
             </div>
 
             <!-- Prestmit -->
@@ -522,23 +522,23 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate prestmit-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate prestmit-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate prestmit-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time">Updating...</div>
+                <div class="updated-time prestmit-time">Updating...</div>
             </div>
 
             <!-- Pandar -->
@@ -549,23 +549,23 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate pandar-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate pandar-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate">₦--</div>
+                    <div class="rate-value sell-rate pandar-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time">Updating...</div>
+                <div class="updated-time pandar-time">Updating...</div>
             </div>
 
             <!-- SnappyExchange -->
