feat: update pandar endpoint

--- a/index.html
+++ b/index.html
@@ -574,14 +574,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin
                     </div>
                     <div class="rate-value sell-rate snappy-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum
                     </div>
                     <div class="rate-value sell-rate snappy-eth-sell">₦--</div>
                 </div>
