feat: update crypto icons

--- a/index.html
+++ b/index.html
@@ -573,21 +573,21 @@
                 <div class="exchange-name">SnappyExchange</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin
                     </div>
                     <div class="rate-value sell-rate snappy-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum
                     </div>
                     <div class="rate-value sell-rate snappy-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value sell-rate snappy-usdt-sell">₦--</div>
