feat: update crpto icons and Non values

--- a/index.html
+++ b/index.html
@@ -273,21 +273,21 @@
                 <div class="exchange-name">Astro Africa</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
@@ -300,21 +300,21 @@
                 <div class="exchange-name">Breet Rate</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
@@ -327,21 +327,21 @@
                 <div class="exchange-name">Jeroid</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
@@ -354,21 +354,21 @@
                 <div class="exchange-name">Prestmit</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
@@ -381,21 +381,21 @@
                 <div class="exchange-name">Pandar</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
@@ -408,21 +408,21 @@
                 <div class="exchange-name">SnappyExchange</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
@@ -438,21 +438,21 @@
                 <div class="exchange-name">Astro Africa</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value sell-rate astro-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value sell-rate astro-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value sell-rate astro-usdt-sell">₦--</div>
@@ -465,21 +465,21 @@
                 <div class="exchange-name">Breet Rate</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value sell-rate breet-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value sell-rate breet-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value sell-rate breet-usdt-sell">₦--</div>
@@ -492,21 +492,21 @@
                 <div class="exchange-name">Jeroid</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value sell-rate jeroid-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value sell-rate jeroid-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value sell-rate jeroid-usdt-sell">₦--</div>
@@ -519,21 +519,21 @@
                 <div class="exchange-name">Prestmit</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value sell-rate prestmit-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value sell-rate prestmit-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value sell-rate prestmit-usdt-sell">₦--</div>
@@ -546,21 +546,21 @@
                 <div class="exchange-name">Pandar</div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="BTC" class="crypto-icon">
+                        <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin (BTC)
                     </div>
                     <div class="rate-value sell-rate pandar-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="ETH" class="crypto-icon">
+                        <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum (ETH)
                     </div>
                     <div class="rate-value sell-rate pandar-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
-                        <img src="https://cryptologos.cc/logos/tether-usdt-logo.png" alt="USDT" class="crypto-icon">
+                        <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
                     <div class="rate-value sell-rate pandar-usdt-sell">₦--</div>
