feat: update crpto icons and Non values

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
         }
 
         .rate-value {
-            font-weight: 700;
+            font-weight: 600;
+            font-size: 1rem;
             color: var(--primary);
         }
 
