feat: UI Asset Name Update

--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
@@ -302,14 +302,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
@@ -329,14 +329,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
@@ -356,14 +356,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
@@ -383,14 +383,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
@@ -410,14 +410,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value buy-rate">₦--</div>
                 </div>
@@ -440,14 +440,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value sell-rate astro-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value sell-rate astro-eth-sell">₦--</div>
                 </div>
@@ -467,14 +467,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value sell-rate breet-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value sell-rate breet-eth-sell">₦--</div>
                 </div>
@@ -494,14 +494,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value sell-rate jeroid-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value sell-rate jeroid-eth-sell">₦--</div>
                 </div>
@@ -521,14 +521,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value sell-rate prestmit-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value sell-rate prestmit-eth-sell">₦--</div>
                 </div>
@@ -548,14 +548,14 @@
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
-                        Bitcoin (BTC)
+                        Bitcoin 
                     </div>
                     <div class="rate-value sell-rate pandar-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
-                        Ethereum (ETH)
+                        Ethereum 
                     </div>
                     <div class="rate-value sell-rate pandar-eth-sell">₦--</div>
                 </div>
