--- a/index.html
+++ b/index.html
@@ -442,23 +442,23 @@
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin 
                     </div>
-                    <div class="rate-value sell-rate astro-btc-sell">₦--</div>
+                    <div class="rate-value sell-rate astro-africa-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum 
                     </div>
-                    <div class="rate-value sell-rate astro-eth-sell">₦--</div>
+                    <div class="rate-value sell-rate astro-africa-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate astro-usdt-sell">₦--</div>
+                    <div class="rate-value sell-rate astro-africa-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time astro-time">Updating...</div>
+                <div class="updated-time astro-africa-time">Updating...</div>
             </div>
 
             <!-- Breet Rate -->
@@ -577,23 +577,23 @@
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin
                     </div>
-                    <div class="rate-value sell-rate snappy-btc-sell">₦--</div>
+                    <div class="rate-value sell-rate snappy-exhange-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum
                     </div>
-                    <div class="rate-value sell-rate snappy-eth-sell">₦--</div>
+                    <div class="rate-value sell-rate snappy-exhange-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate snappy-usdt-sell">₦--</div>
+                    <div class="rate-value sell-rate snappy-exhange-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time snappy-time">Updating...</div>
+                <div class="updated-time snappy-exhange-time">Updating...</div>
             </div>
         </div>
 
