feat: updated snappy class name err

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         }
 
         .exchange-name {
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             font-weight: 700;
             margin-bottom: 1rem;
             color: var(--primary);
@@ -577,23 +577,23 @@
                         <img src="./assets/bitcoin.png" alt="BTC" class="crypto-icon">
                         Bitcoin
                     </div>
-                    <div class="rate-value sell-rate snappy-exhange-btc-sell">₦--</div>
+                    <div class="rate-value sell-rate snappy-exchange-btc-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/ethereum.png" alt="ETH" class="crypto-icon">
                         Ethereum
                     </div>
-                    <div class="rate-value sell-rate snappy-exhange-eth-sell">₦--</div>
+                    <div class="rate-value sell-rate snappy-exchange-eth-sell">₦--</div>
                 </div>
                 <div class="rate-item">
                     <div class="crypto-name">
                         <img src="./assets/tether.png" alt="USDT" class="crypto-icon">
                         USDT
                     </div>
-                    <div class="rate-value sell-rate snappy-exhange-usdt-sell">₦--</div>
+                    <div class="rate-value sell-rate snappy-exchange-usdt-sell">₦--</div>
                 </div>
-                <div class="updated-time snappy-exhange-time">Updating...</div>
+                <div class="updated-time snappy-exchange-time">Updating...</div>
             </div>
         </div>
 
