feat: updated discalimer

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             padding: 1rem;
             background: rgba(110, 69, 226, 0.1);
             border-radius: 8px;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             color: var(--text-light);
             text-align: center;
         }
@@ -598,7 +598,7 @@
         </div>
 
         <div class="disclaimer">
-            <strong>Note:</strong> Rates are indicative and may vary. Always check with the exchange for the most current rates before trading.
+            <strong>Note:</strong> These rates are gathered and refreshed in real time, reflecting live changes across multiple exchange platforms. We've implemented systems to reduce lag and ensure data fidelity, so what you see is closely aligned with current trading values. This level of synchronization is ideal for anyone needing accurate benchmarks in a fast-paced environment.
             <br>Last updated: <span id="current-time">--</span>
         </div>
     </div>
